# Inventory_Serivce

./: pyproject.toml
src/: customError.py  dependencyContainer.py  main.py
src/inventory/: inventory.py  inventory_repository.py  inventory_service.py
src/product/: product.py  product_cache.py  product_repository.py  product_service.py  review.py
