[project]
name = "inventory"
version = "0.1.0"
description = ""
authors = [
    {name = "Lin Kuai",email = "guilin0927@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.124.4,<0.125.0)",
    "redis (>=7.1.0,<8.0.0)",
    "pymongo (>=4.15.5,<5.0.0)"
]

[tool.poetry]
packages = [{include = "inventory", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
